Update and rename image.html to index.html

--- a/index.html
+++ b/index.html
@@ -8,21 +8,30 @@
 	<div class="wrapper">
 		<header>
 			<div class="logo">PINK</div>
-			<button class="top-menu"></button>
+			<a href="#" class="top-menu"></a>
+			<ul>
+				<li>Информация</li>
+				<li>Возможности</li>
+				<li>Отзывы</li>
+				<li>Стоимость</li>
+			</ul>
 			<div class="slogan">
 				<h1>Взгляните на жизнь иначе!</h1>
 			</div>
 		</header>
 			<div class="download-app">
 				<button class="download">Скачать приложение</button><br>
-				<a href="#">ios</a>
-				<a href="#">andr</a>
-				<a href="#">win</a>
+				<a href="#">Скачать приложение</a><br>
+				<a href="#"><img src="#" alt="#"></a>
+				<a href="#"><img src="#" alt="#"></a>
+				<a href="#"><img src="#" alt="#"></a>
 				<p>Доступно для iPhone, iPad, Android, Windows Phone, Mac OS, Windows 8</p>
 			</div>
 			<div class="features">
-				<h2>Устали от серости мегаполиса?</h2>
-				<h2>Нам есть, что вам предложить!</h2>
+					<h2>Устали от серости мегаполиса?</h2>
+					<h2>Нам есть, что вам предложить!</h2>
+			</div>
+			<div class="advantages">
 				<h3>Поднимает настроение</h3>
 				<p>Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>
 				<h3>Меняет мир вокруг</h3>
@@ -38,14 +47,6 @@
 				<div class="slide2">
 				</div>
 				<div class="slide3">
-				</div>
-				<input type="radio" id="btn-1" name="toggle" checked>
-				<input type="radio" id="btn-2" name="toggle">
-				<input type="radio" id="btn-3" name="toggle">
-				<div class="slider-controls">
-					<label for="btn-1"></label>
-					<label for="btn-2"></label>
-					<label for="btn-3"></label>
 				</div>
 			</div>
 			<div class="buying-options-slider">
@@ -64,14 +65,6 @@
 					</ul>
 				</div>
 				<div class="slide3">
-				</div>
-				<input type="radio" id="btn-1" name="toggle">
-				<input type="radio" id="btn-2" name="toggle" checked>
-				<input type="radio" id="btn-3" name="toggle">
-				<div class="slider-controls">
-					<label for="btn-1"></label>
-					<label for="btn-2"></label>
-					<label for="btn-3"></label>
 				</div>
 			</div>
 		<footer>
