--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 				</a>
 			</div>
 			<a class="mobile-menu-open mobile-menu-open--active" href="#"></a>
-			<nav class="mobile-menu">
+			<nav class="mobile-menu-nav">
 				<ul class="mobile-menu">
 					<li class="mobile-menu__item">Информация</li>
 					<li class="mobile-menu__item">Возможности</li>
