--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 		</article>
 		<footer class="page-footer">
 			<h2 class="page-footer__heading">Остались вопросы? Свяжитесь с нами!</h2>
-			<h3 class="page-footer">Звоните:</h3>
+			<h3 class="page-footer__heading">Звоните:</h3>
 			<p class="page-footer__phone">8 (800) 1000 900</p>
 			<h3 class="page-footer__heading">Пишите:</h3>
 			<p class="page-footer__email"><a href="mailto:hello@pinkapp.ru">hello@pinkapp.ru</a></p>
