mobile-menu open and close

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 			<div class="page-header__logo">
 				<a class="page-header__link" href="index.html">PINK
 				</a>
-				<a class="mobile-menu-open mobile-menu-open--active" href="#">
-					<img class="mobile-menu-open__img" src="img/btn-mobile-menu-open.png" height="24" width="50" alt="#">
+				<a class="mobile-menu-open mobile-menu-open--active js-menu-open" href="#">
+					<img class="mobile-menu-open__img" src="img/btn-mobile-menu-open.png" height="24" width="50" alt="">
 				</a>
 			</div>
 			<nav class="mobile-menu-nav">
@@ -104,5 +104,6 @@
 			</div>
 		</footer>
 	</div>
+	<script src="js/script.js"></script>
 </body>
 </html>
