mobile-menu links fix

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 			</div>
 			<nav class="mobile-menu-nav">
 				<ul class="mobile-menu">
-					<li class="mobile-menu__item">Информация</li>
-					<li class="mobile-menu__item">Возможности</li>
-					<li class="mobile-menu__item">Отзывы</li>
-					<li class="mobile-menu__item">Стоимость</li>
+					<li class="mobile-menu__item"><a class="mobile-menu__item-link" href="">Информация</a></li>
+					<li class="mobile-menu__item"><a class="mobile-menu__item-link" href="">Возможности</a></li>
+					<li class="mobile-menu__item"><a class="mobile-menu__item-link" href="">Отзывы</a></li>
+					<li class="mobile-menu__item"><a class="mobile-menu__item-link" href="">Стоимость</a></li>
 				</ul>
 			</nav>
 			<h1 class="page-header__slogan">Взгляните на жизнь иначе!</h1>
